syntax = "proto3";
package POGOProtos;

message AddLoginActionProto {
	IdentityProvider identity_provider = 1;
syntax = "proto3";
package POGOProtos;

message AddLoginActionOutProto {
	bool success = 1;
	repeated LoginDetail login_detail = 2;
	Status status = 3;

	bytes inner_message = 2;
}

	enum Status {
		UNSET = 0;
		AUTH_FAILURE = 1;
		LOGIN_TAKEN = 2;
	}
}
