syntax = "proto3";
package POGOProtos;

message ClientGameMasterTemplateProto {
	string template_id = 1;
	bytes data = 2;
}
