syntax = "proto3";
package POGOProtos;

message GetAvailableSkusAndBalancesOutProto {
	repeated AvailableSkuProto available_sku = 1;
	repeated CurrencyQuantityProto balance = 2;
	string player_token = 3;

	enum Status {
		UNSET = 0;
		SUCCESS = 1;
		FAILURE = 2;
	}
}
