syntax = "proto3";
package POGOProtos;

message GetInventoryResponseProto {
	bool success = 1;
	InventoryDeltaProto inventory_delta = 2;
}
