syntax = "proto3";
package POGOProtos;

message GymStatusAndDefendersProto {
	PokemonFortProto pokemon_fort_proto = 1;
	repeated GymDefenderProto gym_defender = 2;
}
