syntax = "proto3";
package POGOProtos;

message IncomingFriendInviteDisplayProto {
	IncomingFriendInviteProto invite = 1;
	PlayerSummaryProto player = 2;
}
