syntax = "proto3";
package POGOProtos;

message InventoryDeltaProto {
	int64 original_timestamp = 1;
	int64 new_timestamp = 2;
	repeated InventoryItemProto inventory_item = 3;
}
