syntax = "proto3";
package POGOProtos;

enum OnboardingArStatus {
	UNSET = 0;
	OFF = 1;
	AR_STANDARD = 2;
	AR_PLUS = 3;
}
