syntax = "proto3";
package POGOProtos;

message OutgoingFriendInviteDisplayProto {
	OutgoingFriendInviteProto invite = 1;
	PlayerSummaryProto player = 2;
}
