syntax = "proto3";
package POGOProtos;

message PlayerSummaryProto {
	string player_id = 1;
	string codename = 2;
	bytes public_data = 3;
	string team = 4;
	string fb_user_id = 5;
}
