syntax = "proto3";
package POGOProtos;

message PoiPlayerMetadataTelemetry {
	string device_model = 1;
	string device_os = 2;
}
