syntax = "proto3";
package DumpProtos;

message PoiSubmissionPhotoUploadErrorTelemetry {
	PoiSubmissionPhotoUploadErrorIds error_id = 1;
	PoiImageType image_type = 2;

	enum PoiSubmissionPhotoUploadErrorIds {
		UNSET = 0;
		POI_PHOTO_UPLOAD_ERROR = 1;
		POI_PHOTO_UPLOAD_TIMEOUT = 2;
	}
}
