syntax = "proto3";
package POGOProtos;

message PushNotificationRegistryProto {
	ApnToken apn_token = 1;
	GcmToken gcm_token = 2;
}
