syntax = "proto3";
package POGOProtos;

message ReplaceLoginActionProto {
	IdentityProvider existing_identity_provider = 1;
	AddLoginActionProto new_login = 2;
}
