syntax = "proto3";
package DumpProtos;

message RouteImageProto {
	string image_id = 1;
	string image_context = 2;

	//oneof Source {
		//none = 0;
		//image_id = 1;
		//image_context = 2;
	//}
}
