syntax = "proto3";
package POGOProtos;

message RoutePoiProto {
	string poi_id = 1;
}
