syntax = "proto3";
package DumpProtos;

message SkuDataProto {
	string id = 1;
	bool is_enabled = 2;
	repeated SkuContentProto content = 3;
	repeated SkuPriceProto price = 4;
	SkuPaymentType payment_type = 5;
	int64 last_modified_timestamp_ms = 6;
	repeated SkuPresentationDataProto presentation_data = 7;
	int64 enabled_window_start_ms = 8;
	int64 enabled_window_end_ms = 9;

	enum SkuPaymentType {
		UNSET = 0;
		THIRD_PARTY = 1;
		IN_GAME = 2;
	}
}
