syntax = "proto3";
package DumpProtos;

message SocialProto {

	enum AppKey {
		INVALID = 0;
		INGRESS = 1;
		HOLOHOLO = 2;
		LEXICON = 3;
	}
}
