syntax = "proto3";
package DumpProtos;

message SubmitNewRouteProto {
	string route_submission_id = 1;
	string title = 2;
	string description = 3;
	RouteVisitOrder visit_order = 5;
	repeated RouteCheckpointProto checkpoints = 6;
	RouteImageProto main_image = 7;
}
