syntax = "proto3";
package POGOProtos;

message WithWinGymBattleStatusProto {
}
