syntax = "proto3";
package POGOProtos.Data;

import "POGOProtos/Data/TemplateVariable.proto";
import "POGOProtos/Data/Notification.proto";


message ClientInbox {
	repeated .POGOProtos.Data.Notification notifications = 1;
	repeated .POGOProtos.Data.TemplateVariable builtin_variables = 2;
}
