syntax = "proto3";
package POGOProtos.Enums;

enum NotificationCategory {
	UNSET_NOTIFICATION_CATEGORY = 0;
	GYM_REMOVAL = 1;
	POKEMON_HUNGRY = 2;
	EXCLUSIVE_RAID_INVITE = 3;
	EXCLUSIVE_RAID_CANCELLATION = 4;
	SHARED_EXCLUSIVE_RAID_INVITE = 5;
	GIFTBOX_INCOMING = 6;
	GIFTBOX_DELIVERED = 7;
	FRIENDSHIP_MILESTONE_REWARD = 8;
	GYM_BATTLE_FRIENDSHIP_INCREMENT = 9;
	BGMODE_EGG_HATCH = 10;
	BGMODE_BUDDY_CANDY = 11;
	BGMODE_WEEKLY_FITNESS_REPORT = 12;
	BGMODE_OFF_SESSION_DISTANCE = 13;
	BGMODE_POI_PROXIMITY = 14;
	BGMODE_NAMED_BUDDY_CANDY = 15;
	APP_BADGE_ONLY = 16;
	COMBAT_CHALLENGE_OPENED = 17;
	LUCKY_FRIEND = 18;
	BUDDY_HUNGRY = 19;
	BUDDY_FOUND_GIFT = 20;
	BUDDY_AFFECTION_LEVEL_MILESTONE = 21;
	BUDDY_AFFECTION_WALKING = 22;
	BUDDY_AFFECTION_CARE = 23;
	BUDDY_AFFECTION_BATTLE = 24;
	BUDDY_AFFECTION_PHOTO = 25;
	BUDDY_AFFECTION_POI = 26;
	BUDDY_ATTRACTIVE_POI = 27;
	FRIEND_INVITE_RECEIVED = 28;
	FRIEND_INVITE_ACCEPTED = 29;
	COMBAT_VS_SEEKER_CHARGED = 30;
	COMBAT_COMPETITIVE_SEASON_END = 31;
	BUDDY_AFFECTION_ATTRACTIVE_POI = 32;
	POI_PASSCODE_REDEEMED = 33;
}