syntax = "proto3";
package POGOProtos.Map.Weather;

message DisplayWeather {
	.POGOProtos.Map.Weather.DisplayWeather.DisplayLevel cloud_level = 1;
	.POGOProtos.Map.Weather.DisplayWeather.DisplayLevel rain_level = 2;
	.POGOProtos.Map.Weather.DisplayWeather.DisplayLevel wind_level = 3;
	.POGOProtos.Map.Weather.DisplayWeather.DisplayLevel snow_level = 4;
	.POGOProtos.Map.Weather.DisplayWeather.DisplayLevel fog_level = 5;
	int32 wind_direction = 6;

	enum DisplayLevel {
		LEVEL_0 = 0;
		LEVEL_1 = 1;
		LEVEL_2 = 2;
		LEVEL_3 = 3;
	}
}
